--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/LuckplayMc/AnimeApp.git",
+  "homepage": "https://github.com/LuckplayMc/AnimeApp.git",
   "name": "animeapp",
   "version": "0.1.0",
   "private": true,
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
